# hopper

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml
hopper/: __init__.py  router.py  types.py
hopper/adapters/: __init__.py  anthropic.py  base.py  fugu.py  google.py  grok.py  kimi.py  openai.py  openrouter.py  perplexity.py  shared.py  together.py  zai.py
hopper/models/: anthropic.yaml  fugu.yaml  google.yaml  grok.yaml  kimi.yaml  openai.yaml  openrouter.yaml  perplexity.yaml  together.yaml  zai.yaml
tests/: smoke_test.py  test_adapters.py  test_live.py  test_router.py  test_types.py
